@@ -30,6 +30,7 @@ sunuo (0.3.2) unstable; urgency=low
       - PlayerMobile.m_JusticeProtectors
       - PlayerMobile.m_AntiMacroTable
       - PlayerMobile.m_Aggressors
+      - PlayerMobile.m_Aggressed
       - BaseCreature.m_Owners
       - GenericBuyInfo.Name
       - GenericBuyInfo.DisplayCache.m_Table
